# web-scraper

./: .gitignore  .pre-commit-config.yaml  pixi.toml  pyproject.toml
src/: step2_fetch_wen_page.py  step3_parse_html.py  step4_extract_data.py  step5_handle_pagination.py  step6_save_to_csv.py
