[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = "web scraper repo"
authors = ["Charles Duarte"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
